# bonsai_salad

./: .gitignore  Istruzioni dxf.md  README.md  __init__.py  bpy.py  build_ifc_dxf.py  conftest.py  create_dxf_template.py  ifc_dxf_template.dxf  layer_styles.json  panels.py  test_ifc_dxf.py
dxf_ifc/: README.md  __init__.py  operator.py  ui.py
dxf_ifc/core/: __init__.py  converter.py  importer.py  styles.py
ifc_dxf/: README.md  __init__.py  operator.py  ui.py
ifc_dxf/core/: __init__.py  annotations.py  camera.py  cli.py  dxf_template.py  geometry.py  ifc_query.py  writer.py
ifc_dxf/templates/: ifc_dxf_template_metric.dxf
ifc_dxf_rs/: Cargo.toml
ifc_dxf_rs/src/: lib.rs  python.rs
ifc_dxf_rs/src/annotations/: mod.rs
ifc_dxf_rs/src/geometry/: cleanup.rs  hatch.rs  mod.rs  project.rs
ifc_dxf_rs/src/io/: brep_parser.rs  mod.rs  writer.rs
ifc_dxf_rs/src/pipeline/: context.rs  mod.rs
sheets_to_pdf/: __init__.py  operator.py  ui.py
tests/: conftest.py
tests/ifc_dxf/: test_export.py
tests/ifc_dxf/files/: test_ifc_01.ifc
