[package]
name = "ifc_dxf"
version = "0.1.0"
edition = "2021"
description = "IFC to DXF/DWG serializer — Bonsai Salad tool"
license = "GPL-3.0"
repository = "https://github.com/carlopav/bonsai_salad"

[lib]
name = "ifc_dxf"
crate-type = ["cdylib", "rlib"]

[dependencies]
# DXF/DWG read/write — pure Rust, MPL-2.0
acadrust = "0.3.4"

# Python bindings
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311", "generate-import-lib"] }

# Linear algebra (vectors, matrices)
glam = "0.27"

# Parallel iteration
rayon = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
log = "0.4"

# Shapely-equivalent polygon operations (2D union for hatches)
geo = "0.29"
geo-types = "0.7"

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = ["python"]
python = ["pyo3/extension-module"]
# Build without Python bindings for testing
standalone = []
